--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 server.port=9006
 security.oauth2.client.client-id=way2learnappclientid
 security.oauth2.client.client-secret=secret
-security.oauth2.resource.token-info-uri: http://localhost:8080/oauth/check_token
+security.oauth2.resource.token-info-uri: http://localhost:9696/oauth/check_token
 my.oauth.server.schema=http
 my.oauth.server.host=localhost
-my.oauth.server.port=8080
+my.oauth.server.port=9696
 
 spring.datasource.url=jdbc:mysql://localhost:3306/test?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
@@ -15,3 +15,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+
+eureka.client.serviceUrl.defaultZone = ${DISCOVERY_URL:http://localhost:8761}/eureka/
+eureka.instance.lease-expiration-duration-in-seconds=2
+eureka.instance.lease-renewal-interval-in-seconds=1
+
+spring.application.name=resource-service
